--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
+/* Resetting default styles for all elements */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+/* Styling for the main container */
 .container {
     background-color: #4b4646;
     width: 100%;
@@ -16,6 +18,7 @@
     margin-top: 20px;
 }
 
+/* Styling for generic buttons */
 button {
     border: none;
     background-color: transparent;
@@ -26,15 +29,18 @@ button {
     text-align: center;
 }
 
+/* Hover effect for buttons */
 button:hover {
     background-color: #1788f11a;
 }
 
+/* Styling for active state of a button */
 button.active {
     background-color: #609dcf33;
     color: #2644c8;
 }
 
+/* Styling for color input type */
 input[type="color"] {
     width: 20px;
     height: 10px;
@@ -45,6 +51,20 @@ input[type="color"] {
     background-color: gray;
 }
 
+/* Styling for heading 5 */
 h5 {
     color: blue;
+}
+
+/* Styling for a text area */
+.text-area {
+    width: 950px;
+    height: 400px;
+    border: 1px solid #ddd8d8;
+    margin: auto;
+    margin-top: 20px;
+    font-size: 15px;
+    border-radius: 5px;
+    padding-left: 10px;
+    outline: none;
 }
